# codephrase-api

./: .gitignore  manage.py  pyproject.toml  pytest.ini
codephrase/: asgi.py  settings.py  urls.py  wsgi.py
password_generator/migrations/: 0001_initial.py
