[tool.poetry]
name = "codephrase"
version = "0.1.0"
description = ""
authors = ["Hector Alvarez <alvarez.hectorm@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
